<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Passport</string>
    <string name="action_settings">Settings</string>
    <string name="person_surname_label">Surname :</string>
    <string name="person_given_names_label">Given names :</string>
    <string name="person_birthdate_label">Date of birth :</string>
    <string name="person_birthplace_label">Place of birth :</string>
    <string name="person_sex_label">Sex :</string>
    <string name="person_height_label">Height :</string>
    <string name="person_eyes_color_label">Color of eyes :</string>
    <string name="person_address_label">Address :</string>
    <string name="person_nationality_label">Nationality :</string>
    <string name="person_photography_description">Photography</string>
    <string name="height_unit_text">cm</string>
    <string name="person_signature_label">Signature</string>
    <string name="person_fingerprint_label">Fingerprint</string>
    <string name="person_signature_description">Signature</string>
    <string name="person_fingerprint_description">Fingerprint</string>
    <string name="activity_person_title">User details</string>
    <string name="list_photography_description">Photography</string>
    <string name="person_information_label">Information</string>
    <string name="title_activity_image_viewer">ImageViewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_show_galerry">Show_galerry</string>
    <string name="title_activity_show_gallery">ShowGallery</string>
    <string name="title_activity_advanced_search">Advanced search</string>
    <string name="action_search">AdvancedSearch</string>
    <string name="action_refresh">Reload</string>
    <string name="title_activity_splash_screen">Passport</string>
    <string name="title_activity_person_carte">PersonCarte</string>
    <string name="button_search_label">Search</string>

</resources>
