<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/person_photography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/person_short_photography"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/person_photography_description"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:id="@+id/person_short_identity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/person_surname_"
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:layout_height="wrap_content"
                android:text="@string/person_surname_label" />

            <TextView
                android:id="@+id/person_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               	android:layout_marginLeft="5dp"
               	android:textColor="@android:color/white"
                android:textIsSelectable="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/person_given_names_"
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:text="@string/person_given_names_label" />

            <TextView
                android:id="@+id/person_given_names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:textStyle="bold" />

         
        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/person_nationality_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_nationality_label" />

            <TextView
                android:id="@+id/person_nationality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/person_height_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_height_label" />

            <TextView
                android:id="@+id/person_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/person_Birth_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_birthdate_label" />

            <TextView
                android:id="@+id/person_Birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/person_EyesCol_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_eyes_color_label" />

            <TextView
                android:id="@+id/person_EyesCol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white" />

        </TableRow>
    </TableLayout>
    
</LinearLayout>
